# franka_ws

./: .gitignore  README.md
src/fr3_controllers/: CMakeLists.txt  fr3_controllers.xml  package.xml
src/fr3_controllers/config/: controllers.yaml  fr3_left_controllers.yaml  fr3_right_controllers.yaml
src/fr3_controllers/include/fr3_controllers/: cartesian_impedance_controller.hpp  default_robot_behavior_utils.hpp  gripper_controller.hpp  joint_impedance_controller.hpp  joint_position_controller.hpp  joint_torque_controller.hpp  joint_velocity_controller.hpp  pseudo_inversion.hpp
src/fr3_controllers/launch/: cartesian_impedance_controller.launch.py  dual_arm_joint_impedance_controller.launch.py  franka.launch.py  joint_impedance_controller.launch.py  joint_position_controller.launch.py  joint_torque_controller.launch.py  joint_velocity_controller.launch.py
src/fr3_controllers/scripts/: dual_trail.py  trail1.py  trail2.py  trail3.py
src/fr3_controllers/src/: cartesian_impedance_controller.cpp  gripper_controller.cpp  joint_impedance_controller.cpp  joint_position_controller.cpp  joint_torque_controller.cpp  joint_torque_controllers.cpp  joint_velocity_controller.cpp
src/fr3_states/: package.xml  setup.cfg  setup.py
src/fr3_states/scripts/: jacobian_publisher.py  pose_publisher.py
src/franka_ros2/franka_bringup/config/: controllers.yaml  dual_arm_controllers.yaml
src/franka_ros2/franka_bringup/launch/: dual_arm.launch.py
src/franka_ros2/franka_description/rviz/: bringup.rviz
src/franka_ros2/franka_example_controllers/: CMakeLists.txt
(+5 files in other folders)
