<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fr3_controllers</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="shreyas.kumar@icloud.com">straw</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
 
  <depend>rclcpp</depend>
  <depend>controller_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>franka_msgs</depend>
  <depend>franka_semantic_components</depend>
  <depend>sensor_msgs</depend>
  <depend>urdf</depend>
  <depend>orocos_kdl</depend>
  <depend>kdl_parser</depend>
  <depend>Eigen3</depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>urdf_parser_py</depend>
  <depend>kdl_parser_py</depend>
  <depend>python3-orocos-kdl</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>